# lush

./: .gitignore
share/: core.lua  log.lua
share/lush/: cmd.lua  completion.lua  fmt.lua  prompt.lua  shell.lua  trie.lua  vals.lua
share/lush/prompt/: actions.lua  bindings.lua
share/lush/util/: table.lua
src/: CMakeLists.txt  lush.c  pcre.c
src/posix/: posix.c
src/proc/: proc.c
src/term/: strings.h  term.c
